[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl"
version = "0.1.0"
description = "Music Playlist (MPL) format handler"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KON/NOS R"}
]
requires-python = ">=3.8"

keywords = [
    "music",
    "playlist",
    "mpl",
    "audio",
    "mp3",
    "flac",
    "wav",
    "ogg",
    "local",
    "offline"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]